--- a/index.html
+++ b/index.html
@@ -128,9 +128,18 @@
     <div class="work-container">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work list">
-            <li class="work-item"><img src="./images/codding.jpg" alt="codding" width="370"></li>
-            <li class="work-item"><img src="./images/uxdesign.jpg" alt="uxdesign" width="370"></li>
-            <li class="work-item"><img src="./images/choosecolor.jpg" alt="choosecolor" width="370"></li>
+            <li class="work-item">
+                <img src="./images/codding.jpg" alt="codding" width="370">
+                <p class="over-text">Десктопні додатки</p>
+            </li>
+            <li class="work-item">
+                <img src="./images/uxdesign.jpg" alt="uxdesign" width="370">
+                <p class="over-text">Мобільні додатки</p>
+            </li>
+            <li class="work-item">
+                <img src="./images/choosecolor.jpg" alt="choosecolor" width="370">
+                <p class="over-text">Дизайнерські рішення</p>
+            </li>
         
         </ul>
     </div>
