--- a/portfolio.html
+++ b/portfolio.html
@@ -77,63 +77,135 @@
             <div class="example-container">
                 <ul class="work-example list">
                     <li class="example-item">
-                        <img src="./images/tehnokriak.jpg" alt="tehnokriak" width="370"></a>
+                        <div class="example-overlay">
+                            <img src="./images/tehnokriak.jpg" alt="tehnokriak" width="370"></a>
+                            <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Технокряк</h2>
                         <p class="example-text">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="example-item">
+                        <div class="example-overlay">
                          <img src="./images/poster.jpg" alt="poster" width="370"></a>
+                         <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Постер New Orlean vs Golden Star</h2>
                             <p class="example-text">Дизайн</p>
                         </div>
                     </li>
                     <li class="example-item">
+                        <div class="example-overlay">
                          <img src="./images/seafood.jpg" alt="seafood" width="370"></a>
+                         <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Ресторан Seafood</h2>
                             <p class="example-text">Додаток</p>
                         </div>
                     </li>
                     <li class="example-item">
+                        <div class="example-overlay">
                          <img src="./images/prime.jpg" alt="prime" width="370"></a>
+                         <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Проєкт Prime</h2>
                             <p class="example-text">Маркетинг</p>
                         </div>
                     </li>
                     <li class="example-item">
+                        <div class="example-overlay">
                          <img src="./images/boxes.jpg" alt="boxes" width="370"></a>
+                         <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Проєкт Boxes</h2>
                             <p class="example-text">Додаток</p>
                         </div>
                     </li>
                     <li class="example-item">
+                        <div class="example-overlay">
                          <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370"></a>
+                         <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Inspiration has no Borders</h2>
                             <p class="example-text">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="example-item">
+                        <div class="example-overlay">
                          <img src="./images/limited.jpg" alt="limited edition" width="370"></a>
+                         <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Видання Limited Edition</h2>
                             <p class="example-text">Дизайн</p>
                         </div>
                     </li>
                     <li class="example-item">
+                        <div class="example-overlay">
                          <img src="./images/lab.jpg" alt="lab" width="370"></a>
+                         <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Проект LAB</h2>
                             <p class="example-text">Маркетинг</p>
                         </div>
                     </li>
                     <li class="example-item">
+                        <div class="example-overlay">
                          <img src="./images/business.jpg" alt="Growing Business" width="370"></a>
+                         <div class="overlay-text">
+                                <p class="example-overlay-text">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
+                        </div>
                         <div class="example-card">
                             <h2 class="example-title">Growing Business</h2>
                             <p class="example-text">Додаток</p>
