--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
                         </use>
                     </svg>
                 </button>
+                <div class="contact-form">
+                    <input type="text" class="contact-form-input" placeholder="Ім'я">
+                    <input type="text" class="contact-form-input" placeholder="Телефон">
+                    <input type="text" class="contact-form-input" placeholder="Пошта">
+                    <div class="form-button">
+                        <button type="button" class="contact-form-button">Відправити</button>
+                    </div>
+
+                </div>
         
             </div>
     
