--- a/index.html
+++ b/index.html
@@ -77,9 +77,26 @@
                     </svg>
                 </button>
                 <div class="contact-form">
-                    <input type="text" class="contact-form-input" placeholder="Ім'я">
-                    <input type="text" class="contact-form-input" placeholder="Телефон">
-                    <input type="text" class="contact-form-input" placeholder="Пошта">
+                    <input type="text"
+                     class="contact-form-input"
+                      placeholder="Ім'я"
+                       required name="user_name"
+                       pattern="[a-zA-Zа-яА-яіІїЇ]+"/>
+                    <input type="tel"
+                     class="contact-form-input"
+                      placeholder="Телефон"
+                       required name="user_phone"
+                       pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                       title="xxx-xxx-xx-xx"/>
+                    <input type="email"
+                     class="contact-form-input"
+                      placeholder="Пошта"
+                       required name="user_mail"
+                       />
+                       <div class="contact-form-field">
+                        <input type="checkbox">
+                        Погоджуюся з розсилкою та приймаю Умови договору
+                       </div>
                     <div class="form-button">
                         <button type="button" class="contact-form-button">Відправити</button>
                     </div>
