--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <a href="" class="social-list-link">
                                 <svg class="icon-team" width="20" height="20">
                                 
-                                    <use href="./images/sprite.svg#icon-instagram">
+                                    <use class="icon-team-logo" href="./images/sprite.svg#icon-instagram">
                                     </use>
                                 </svg>
                             </a>
