--- a/index.html
+++ b/index.html
@@ -539,8 +539,14 @@
                         <textarea name="user_message" class="contact-form-message" placeholder="Введіть текст"></textarea>
                     </label>
                     <label class="contact-form-field-wrapper">
-                        <input name="user_policy" type="checkbox" class="contact-form-field">
-                        Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a>
+                        <input name="user_policy" type="checkbox" class="contact-form-field is-hidden">
+                        <svg class="modal-form-check" width="16px" height="15px">
+                            <use class="modal-form-check-icon"
+                             href="./images/sprite.svg#icon-check">
+
+                            </use>
+                        </svg>
+                        Погоджуюся з розсилкою та приймаю&nbsp<a href="">Умови договору</a>
                     </label>
                     <div class="form-button">
                         <button type="submit" class="contact-form-button">Відправити</button>
